kubernetes/.archive/istio-ingress/gateway/app/gateway.yaml
---
# kubernetes/apps/istio-ingress/gateway/app/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: external-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: istio-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts: ['external.${SECRET_DOMAIN}', '*.${SECRET_DOMAIN}']
      # tls:
      #   httpsRedirect: true  # Redirect all HTTP traffic to HTTPS
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ${SECRET_DOMAIN/./-}-production-tls
      hosts: ['external.${SECRET_DOMAIN}', '*.${SECRET_DOMAIN}']
