kubernetes/.archive/istio-ingress/gateway/app/auth-policy.yaml
---
# kubernetes/apps/istio-ingress/gateway/app/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authentik-external
  namespace: istio-ingress
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: CUSTOM
  provider:
    name: authentik
  rules:
    - {}  # Apply to all requests
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: authentik-filter
  namespace: istio-ingress
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.ext_authz
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            http_service:
              server_uri:
                uri: http://ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local:9000
                cluster: outbound|9000||ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local
              path_prefix: /outpost.goauthentik.io/auth/nginx
